# tauri_examples

multi-window/: Cargo.toml
multi-window/src/: app.rs  main.rs
multi-window/src-tauri/: Cargo.toml  tauri.conf.json
multi-window/src-tauri/src/: main.rs
