[package]
name = "multi-window-ui"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.7.0-gamma3", features = ["csr"] }
#
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1.7"
#
serde-wasm-bindgen = "0.6"
serde = { version = "1", features = ["derive"] }

[workspace]
members = ["src-tauri"]
